--- a/src/index.html
+++ b/src/index.html
@@ -6,5 +6,7 @@
 </head>
 <body>
 
+  <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.36/dist/web3.min.js" integrity="sha256-nWBTbvxhJgjslRyuAKJHK+XcZPlCnmIAAMixz6EefVk=" crossorigin="anonymous"></script>
+  <script src="js/app.js" type="text/javascript"></script>
 </body>
 </html>
