--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
       <form id="set-greeting">
         <div>
           <label>Update Greeting</label>
-          <input type="text" name="greeting">
+          <input type="text" name="greeting" autofocus>
         </div>
         <div>
           <input type="submit" value="update">
